--- a/package.json
+++ b/package.json
@@ -12,5 +12,14 @@
   "devDependencies": {
     "@nuxt/devtools": "latest",
     "nuxt": "^3.7.3"
+  },
+  "dependencies": {
+    "@nuxt/image": "^0.7.1",
+    "@nuxtjs/tailwindcss": "^6.8.0",
+    "@pinia/nuxt": "^0.4.11",
+    "@vueuse/core": "^10.4.1",
+    "lodash-es": "^4.17.21",
+    "moment": "^2.29.4",
+    "vue-i18n": "^9.4.1"
   }
 }
