--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
     "nuxt": "^3.7.3"
   },
   "dependencies": {
-    "@nuxt/image": "^0.7.1",
+    "@nuxt/image": "^1.0.0-rc.2",
     "@nuxtjs/tailwindcss": "^6.8.0",
     "@pinia/nuxt": "^0.4.11",
     "@vueuse/core": "^10.4.1",
     "lodash-es": "^4.17.21",
     "moment": "^2.29.4",
+    "pinia": "^2.1.6",
     "vue-i18n": "^9.4.1"
   }
 }
