--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
+    "@types/lodash-es": "^4.17.9",
     "nuxt": "^3.7.3"
   },
   "dependencies": {
+    "@iconify/vue": "^4.1.1",
     "@nuxt/image": "^1.0.0-rc.2",
     "@nuxtjs/tailwindcss": "^6.8.0",
     "@pinia/nuxt": "^0.4.11",
